# Motif

./: .gitignore  LICENSE  README.md  benchmark_audit.md  benchmark_dataset.json  benchmark_multimodal_20260719_120001.json  benchmark_multimodal_20260719_122357.json  benchmark_multimodal_20260719_123158.json  benchmark_multimodal_20260719_160101.json  benchmark_multimodal_20260720_173227.json  benchmark_multimodal_20260720_173317.json  benchmark_multimodal_20260720_174033.json  benchmark_multimodal_20260720_175743.json  benchmark_multimodal_20260720_175759.json  benchmark_multimodal_20260720_180409.json  cli.py  config.template.toml  custom_eval_results.json  custom_scorer.py  download_benchmark.py  generate_test_data.py  guide.md  implementation_plan.md  install.ps1  install.sh  issues.md  pre_implementation_resolution.md  pyproject.toml  pyrightconfig.json  ragas_results.json  ragas_results_cache.json  setup_models.py  walkthrough.md
.github/workflows/: test-install.yml
docs/: report-1.md  report-2 p1.md  report-2 p2.md  report-2 p3.md
models/: .gitkeep
plans/: overview.md  phase-1-storage.md  phase-2-ingestion.md  phase-3-query-pipeline.md  phase-4-quality.md  phase-5-multimodal.md  phase-6-evaluation.md  phase-7-optional.md
project-context/: architecture.md  context.md  flow.md  instructions.md  mvp.md  progress.md  tests.md  trd.md
rag/: __init__.py  cli.py  config.py  errors.py  intent.py  logging_config.py  pipeline.py  session.py  setup_models.py  theme.py  types.py  warmup.py
rag/commands/: __init__.py  clear.py  exit.py  help.py  ingest.py  remove.py  reset.py  setup.py  status.py  sync.py  workspace.py
rag/data/: config.template.toml
rag/evaluation/: latency_test.py  multimodal_benchmark.py  ragas_runner.py  retrieval_benchmark.py  test_generator.py
rag/generation/: __init__.py  context_builder.py  flare.py  llm_client.py  prompts.py  query_rewriter.py
rag/ingestion/: __init__.py  chunker.py  deduplicator.py  raptor.py  semantic_chunker.py
rag/ingestion/parsers/: __init__.py  audio.py  base.py  csv.py  docx.py  html.py  image.py  markdown.py  ocr_engine.py  pdf.py
rag/models/: __init__.py  captioner.py  embedder.py  model_manager.py  reranker.py
rag/reranking/: __init__.py  cross_encoder.py
rag/retrieval/: __init__.py  bm25_index.py  calibrate.py  expander.py  fusion.py  vector_store.py
rag/storage/: __init__.py  chunk_store.py  db_manager.py  ingestion_tracker.py  query_cache.py  reconciler.py  transaction_manager.py
scripts/: clean_benchmark.py  cleanup_onnx.py  evaluate_rag.py  generate_fixtures_advanced.py  install.ps1  install.sh  prepare_test_data.py  setup_models.py  test_multimodal.py
test_data_multimodal/: test_finance.docx  test_secret.md
tests/: conftest.py  verify_wheel.py
tests/evaluation/: test_pipeline.py
tests/evaluation/definitive_test_data/: ground_truth.json  machine_learning.html  project_alpha.docx
tests/fixtures/: sample.docx  sample.md  sample.txt
tests/integration/: test_cache.py  test_history.py  test_ingestion.py  test_latency.py  test_multimodal_ingestion.py  test_pipeline.py  test_query.py  test_sync.py
tests/unit/: test_audio_parser.py  test_bm25.py  test_chunk_store.py  test_chunker.py  test_citation.py  test_context_builder.py  test_deduplicator.py  test_docx_parser.py  test_embedder.py  test_fusion.py  test_hyde.py  test_image_parser.py  test_parsers.py  test_semantic_chunker.py  test_tracker.py
