[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motif-rag"
version = "0.1.0"
description = "Offline multimodal RAG — query local documents with no internet connection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["rag", "llm", "offline", "local", "documents", "multimodal"]

# ─────────────────────────────────────────────────────────────────────────────
# Compatible Version Stack (as of 2025-07-19)
# ─────────────────────────────────────────────────────────────────────────────
# Python:                3.11 – 3.12
# llama-cpp-python:      0.3.x  (0.2.x lacks Qwen2.5 GGUF support)
# onnxruntime:           1.18.x (CPU) or onnxruntime-gpu 1.17+ (CUDA)
# transformers:          4.40 – 4.50 (tokenizer only; not used for inference)
# qdrant-client:         1.10+ (embedded local mode, no server required)
# rank-bm25:             0.2.x
# pymupdf:               1.24+
# huggingface-hub:       0.23+
# ragas:                 0.1.x  (v0.2 has breaking API changes)
# ─────────────────────────────────────────────────────────────────────────────

dependencies = [
    # Interface
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    # Vector store (local embedded mode, no server)
    "qdrant-client[local]>=1.10",
    # Lexical search
    "rank-bm25>=0.2",
    # Embedding + reranker inference (ONNX, no torch at query time)
    # NOTE: install onnxruntime-gpu instead for GPU-accelerated embedding.
    # See: pip install motif-rag[gpu]
    "onnxruntime>=1.18",
    # Tokenizer (used only for token counting; not for inference)
    "tokenizers>=0.19",
    "transformers>=4.40",
    # Document parsers
    "pymupdf>=1.24",
    "markdown-it-py>=3.0",
    # DOCX parser
    "python-docx>=1.1",
    # Model download
    "huggingface-hub>=0.23",
    # LLM inference — CPU wheel by default.
    # The installer script (install.sh / install.ps1) upgrades this to the
    # appropriate CUDA pre-built wheel when a CUDA-capable GPU is detected.
    # Minimum 0.3.0 required for Qwen2.5 and Phi-3.5 GGUF Q4_K_M support.
    "llama-cpp-python>=0.3.0",
    # Progress display during model download
    "tqdm>=4.66",
    "platformdirs>=4.10.1",
]

[project.optional-dependencies]
# GPU-accelerated ONNX for the embedder and reranker.
# Install with: pip install motif-rag[gpu]
# Requires CUDA 11.8+ or ROCm 5.6+.
gpu = [
    "onnxruntime-gpu>=1.18",
]

# Offline evaluation
# Pin <0.2 — RAGAS v0.2 has breaking API changes (evaluate() signature changed).
eval = [
    "ragas>=0.1,<0.2",
    "datasets>=2.0",
]

# Audio ingestion
audio = [
    "pywhispercpp>=1.0",
]

# Semantic chunking
semantic = [
    "semantic-text-splitter>=0.12",
]

# Image captioning (moondream2)
captioning = [
    "transformers>=4.40",
    "Pillow>=10.0",
]

# Development tools
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
# After `uv tool install motif-rag`, this places `motif` on PATH.
motif = "rag.cli:main"

[tool.hatch.build.targets.wheel]
# Only the rag/ package is included in the wheel.
# The root cli.py is a development shim (python cli.py); not part of the installed package.
packages = ["rag"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow — requires models downloaded (deselect with '-m not slow')",
]
